tests/snapshots/formats__zfs__label.img.gz.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ label.img — ZFS pool "tank" (active), disk vdev, pool version 5000, txg 1234  [0x0+0x40000]
    Blank space  [0x0+0x2000]
    Boot block header  [0x2000+0x2000]
  ▾ Configuration (label 0) — 13 pairs  [0x4000+0x1c000]
      version: 5000  [0x400c+0x24]
      name: "tank"  [0x4030+0x20]
      state: 0  [0x4050+0x24]
      txg: 1234  [0x4074+0x20]
      pool_guid: 81985529216486895  [0x4094+0x28]
      errata: 0  [0x40bc+0x24]
      hostid: 2403084827  [0x40e0+0x24]
      hostname: "fixture"  [0x4104+0x28]
      top_guid: 2102120316588816134  [0x412c+0x24]
      guid: 2102120316588816134  [0x4150+0x20]
      vdev_children: 1  [0x4170+0x2c]
    ▾ vdev_tree — 12 pairs  [0x419c+0x204]
        type: "disk"  [0x41c4+0x20]
        id: 0  [0x41e4+0x20]
        guid: 2102120316588816134  [0x4204+0x20]
        path: "/dev/sdb1"  [0x4224+0x28]
        devid: "ata-FIXTURE_DISK-part1"  [0x424c+0x38]
        whole_disk: 1  [0x4284+0x28]
        metaslab_array: 256  [0x42ac+0x2c]
        metaslab_shift: 24  [0x42d8+0x2c]
        ashift: 12  [0x4304+0x24]
        asize: 1073741824  [0x4328+0x24]
        is_log: 0  [0x434c+0x24]
        create_txg: 4  [0x4370+0x28]
    ▾ features_for_read — 2 pairs  [0x43a0+0x94]
        com.delphix:hole_birth: true  [0x43d0+0x2c]
        com.delphix:embedded_data: true  [0x43fc+0x30]
  ▾ Uberblocks (label 0) — newest txg 1234  [0x20000+0x20000]
    ▾ Slot 80 — txg 1232  [0x34000+0x400]
        Magic: 0xbab10c  [0x34000+0x8]
        SPA version: 5000  [0x34008+0x8]
        Transaction group: 1232  [0x34010+0x8]
        GUID sum: 0x4242424242424242  [0x34018+0x8]
        Written: 2024-05-17 13:37:42 UTC  [0x34020+0x8]
        Root block pointer: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x34028+0x80]
        Software version: 0  [0x340a8+0x8]
    ▾ Slot 81 — txg 1233  [0x34400+0x400]
        Magic: 0xbab10c  [0x34400+0x8]
        SPA version: 5000  [0x34408+0x8]
        Transaction group: 1233  [0x34410+0x8]
        GUID sum: 0x4242424242424242  [0x34418+0x8]
        Written: 2024-05-17 13:37:43 UTC  [0x34420+0x8]
        Root block pointer: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x34428+0x80]
        Software version: 0  [0x344a8+0x8]
    ▾ Slot 82 — txg 1234  [0x34800+0x400]
        Magic: 0xbab10c  [0x34800+0x8]
        SPA version: 5000  [0x34808+0x8]
        Transaction group: 1234  [0x34810+0x8]
        GUID sum: 0x4242424242424242  [0x34818+0x8]
        Written: 2024-05-17 13:37:44 UTC  [0x34820+0x8]
        Root block pointer: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x34828+0x80]
        Software version: 0  [0x348a8+0x8]
