tests/snapshots/formats__zfs__label.img.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ label.img — ZFS pool "tank" (active), disk vdev, pool version 5000, txg 1234  [0x0+0x447c]
    Blank space  [0x0+0x2000]
    Boot block header  [0x2000+0x2000]
  ▾ Configuration (label 0) — 13 pairs  [0x4000+0x47c]
      version: 5000  [0x400c+0x24]
      name: "tank"  [0x4030+0x20]
      state: 0  [0x4050+0x24]
      txg: 1234  [0x4074+0x20]
      pool_guid: 81985529216486895  [0x4094+0x28]
      errata: 0  [0x40bc+0x24]
      hostid: 2403084827  [0x40e0+0x24]
      hostname: "fixture"  [0x4104+0x28]
      top_guid: 2102120316588816134  [0x412c+0x24]
      guid: 2102120316588816134  [0x4150+0x20]
      vdev_children: 1  [0x4170+0x2c]
    ▾ vdev_tree — 12 pairs  [0x419c+0x204]
        type: "disk"  [0x41c4+0x20]
        id: 0  [0x41e4+0x20]
        guid: 2102120316588816134  [0x4204+0x20]
        path: "/dev/sdb1"  [0x4224+0x28]
        devid: "ata-FIXTURE_DISK-part1"  [0x424c+0x38]
        whole_disk: 1  [0x4284+0x28]
        metaslab_array: 256  [0x42ac+0x2c]
        metaslab_shift: 24  [0x42d8+0x2c]
        ashift: 12  [0x4304+0x24]
        asize: 1073741824  [0x4328+0x24]
        is_log: 0  [0x434c+0x24]
        create_txg: 4  [0x4370+0x28]
    ▾ features_for_read — 2 pairs  [0x43a0+0x94]
        com.delphix:hole_birth: true  [0x43d0+0x2c]
        com.delphix:embedded_data: true  [0x43fc+0x30]
  ▾ Uberblocks (label 0)  [0x447c+0x0]
